html메뉴 변경 및 그림 폴더 이름 변경 및 사진이름 변경

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- 배경 -->
     <ul id = "allbutton">
         <li class = "button">추천메뉴</li>
-        <li class = "button">메인음식</li>
+        <li class = "button">덮밥류</li>
         <li class = "button">면류</li>
         <li class = "button">버거류</li>
         <li class = "button">음료</li>
