--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/bfda034327.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
-    <!-- <script src="jquery.js"></script> -->
+    crossorigin="anonymous"></script> -->
 </head>
 <body>
     <header>
@@ -25,12 +25,12 @@
     </header>
     <main>
     <!-- 배경 -->
-    <ul>
-        <li class = "button">추천메뉴</li>
-        <li class = "button">덮밥류</li>
-        <li class = "button">면류</li>
-        <li class = "button">버거류</li>
-        <li class = "button">음료</li>
+    <ul id = "menu">
+        <li class = "menubutton">인기메뉴</li>
+        <li class = "menubutton">덮밥류</li>
+        <li class = "menubutton">면류</li>
+        <li class = "menubutton">버거류</li>
+        <li class = "menubutton">음료</li>
     </ul>
     <div id = "picture">
     </div>
@@ -73,5 +73,6 @@
         </div>
         <!-- 시멘틱태그 -->
     </footer>
+    <script src="jquery.js"></script>
 </body>
 </html>
