--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/bfda034327.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="jquery2.js"></script>
 </head>
 <body>
     <header>
@@ -66,6 +65,6 @@
         </div>
         <!-- 시멘틱태그 -->
     </footer>
-    <script src="jquery.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
