--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
         </div>
         <div id = "food">
             <h2 class = "yellow">menu</h2>
-            <input type = "text" placeholder = "메뉴를 입력하세요">
-            <input type = "button" value ="검색">
+            <input type = "text" id = "menuname" placeholder = "메뉴를 입력하세요">
+            <input type = "button" id = "search" value ="검색">
         </div>
     </header>
     <main>
