radio button checked 설정

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <h4>상품구매 결제선택하기</h4>
             <div>
                 <input type="radio" name="payment" id = "cardpayment" value="카드">카드
-                <input type="radio" name="payment" id = "moneypayment" value="현금">현금
+                <input type="radio" name="payment" id = "moneypayment" value="현금" checked>현금
             </div>
             <select id = "money">
                 <option value = "금액을선택하세요">금액을선택하세요</option>
