가격입력칸 기본값 수정

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 <option value = "기타" id = "cash">기타</option>
                 <option value = "가격에맞게">가격에맞게</option>
             </select>
-            <input type = "text" id = "inputprice">
+            <input type = "text" id = "inputprice" placeholder = "지불할 금액을 입력하세요">
             <input type = "text" id = "help" placeholder ="직원에게 부탁할것">
         </div>
         <div id = "bottom">
