html table추가 및 foodPicture data값 배열->for문으로id로가져오기

--- a/public/index.html
+++ b/public/index.html
@@ -35,17 +35,17 @@
                 <i class="far fa-plus-square fa-3x"></i>
                 <i class="far fa-minus-square fa-3x"></i>
             </div>
-            <div id = "choice">
-                <input type = "button" class = "productmenu" value = "상품명">
-                <input type = "button" class = "productmenu" value = "판매금액">
-                <input type = "button" class = "productmenu" value = "수량">
-            </div>
-            <div id = "moniter">
-                <table>
-                    <tbody id = tbodyline>
-                    </tbody>
-                </table>
-            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th class = "productmenu">상품명</th>
+                        <th class = "productmenu">판매금액</th>
+                        <th class = "productmenu">수량</th>
+                    </tr>
+                </thead>
+                <tbody id = "moniter">
+                </tbody>
+            </table>
         </div>
         <div id = "card">
             <h4>상품구매 결제선택하기</h4>
